--- a/assets_src/ui/choose_system.yaml
+++ b/assets_src/ui/choose_system.yaml
@@ -9,12 +9,15 @@ widget:
   image: whitebox.png
   material: Retrograde/RadialGradient
 children:
-  - uuid: 521a33fe-a5e6-4121-acb7-42cb2f3bed9f
-    border: [80, 80, 80, 0]
+  - uuid: b99331c9-d7ea-4318-8981-429035e80207
+    border: [50, 50, 50, 50]
     sizer:
       columnProportions: []
     widget:
-      class: widget
+      class: image
+      id: header_bg
+      image: ui/header.png
+      innerBorder: [50, 50, 50, 50]
     children:
       - uuid: 0363abd3-8c63-469a-89e6-ea47caea735f
         sizer:
@@ -87,7 +90,11 @@ children:
           options: []
           size: [0, 0]
           style: blankList
-  - uuid: 7c83b11b-3033-467b-bbe0-ef4396cbf853
+  - uuid: fd919f69-d656-4a22-9055-47ca8cb695a7
+    sizer:
+      columnProportions: []
     widget:
-      class: widget
-      size: [0, 120]
+      class: image
+      colour: "#00000066"
+      image: whitebox.png
+      size: [0, 125]
