--- a/assets_src/ui/choose_game.yaml
+++ b/assets_src/ui/choose_game.yaml
@@ -20,12 +20,13 @@ children:
       innerBorder: [50, 50, 50, 50]
     children:
       - uuid: 0363abd3-8c63-469a-89e6-ea47caea735f
+        border: [70, 0, 0, 0]
         sizer:
           columnProportions: []
         widget:
           class: widget
           id: game_image_holder
-          size: [830, 500]
+          size: [550, 550]
         children:
           - uuid: 08c0a3a1-26c1-4bdb-911d-0e1ef497b4b4
             proportion: 1
@@ -37,14 +38,17 @@ children:
               id: game_image
               image: whitebox.png
               size: [0, 0]
+            fill: [centreHorizontal, centreVertical]
+        fill: [centreHorizontal, centreVertical]
       - uuid: 773e8ffb-20c6-4b80-bd3c-244754abe268
-        border: [50, 0, 0, 0]
+        border: [120, 0, 0, 0]
         sizer:
           columnProportions: []
+          gap: 15
           type: vertical
         children:
           - uuid: 9860e3b9-f79b-4be1-bb2b-afba4039576b
-            border: [0, -5, 0, 0]
+            border: [0, 70, 0, 0]
             widget:
               class: label
               id: game_name
@@ -52,20 +56,86 @@ children:
               maxWidth: 1800
               style: labelHeader
               text: Game Name
-          - uuid: 45431537-7623-426a-b69d-c3a336558c3d
-            border: [0, 30, 0, 0]
-            widget:
-              class: label
-              id: game_info
-              style: labelRegular
-              text: 19xx Corporation
+          - uuid: fc841630-3286-4641-ae93-ea1c851a324c
+            sizer:
+              columnProportions: []
+              gap: 20
+            children:
+              - uuid: 6cff0f48-38c5-4467-9b49-f4e70fb45079
+                sizer:
+                  columnProportions: []
+                widget:
+                  class: image
+                  id: game_capsule_year
+                  image: ui/description_capsule.png
+                  innerBorder: [10, 3, 10, 3]
+                children:
+                  - uuid: 965b3a98-deda-46f0-a9d3-fb9be5fd1e9c
+                    proportion: 1
+                    widget:
+                      class: label
+                      id: game_info_year
+                      style: labelTag
+                      text: 19xx
+                    fill: [centreHorizontal, centreVertical]
+              - uuid: 5bf4e1f8-ab49-4448-9cd8-69219f98c7fa
+                sizer:
+                  columnProportions: []
+                widget:
+                  class: image
+                  id: game_capsule_developer
+                  image: ui/description_capsule.png
+                  innerBorder: [10, 3, 10, 3]
+                children:
+                  - uuid: 87e200ce-e1cc-4cfb-b6d1-2e8890c6d486
+                    proportion: 1
+                    widget:
+                      class: label
+                      id: game_info_developer
+                      style: labelTag
+                      text: Developer
+                    fill: [centreHorizontal, centreVertical]
+              - uuid: e061475a-f56f-4340-9489-d3f49ab44fc0
+                sizer:
+                  columnProportions: []
+                widget:
+                  class: image
+                  id: game_capsule_nPlayers
+                  image: ui/description_capsule.png
+                  innerBorder: [10, 3, 10, 3]
+                children:
+                  - uuid: 5900edd2-8c60-4dea-8ff3-af9617d07b70
+                    proportion: 1
+                    widget:
+                      class: label
+                      id: game_info_nPlayers
+                      style: labelTag
+                      text: 1
+                    fill: [centreHorizontal, centreVertical]
+              - uuid: 7ecea90e-5fc4-49ae-8f85-ede541697d8e
+                sizer:
+                  columnProportions: []
+                widget:
+                  class: image
+                  id: game_capsule_genre
+                  image: ui/description_capsule.png
+                  innerBorder: [10, 3, 10, 3]
+                children:
+                  - uuid: a34fddaa-7b65-4fff-b148-21d2768adf2a
+                    proportion: 1
+                    widget:
+                      class: label
+                      id: game_info_genre
+                      style: labelTag
+                      text: Genre
+                    fill: [centreHorizontal, centreVertical]
           - uuid: 5b60d717-2b22-44d8-bea8-65fdfac849ef
-            border: [0, 45, 0, 0]
+            border: [0, 40, 0, 0]
             widget:
               class: label
               id: game_description
               maxHeight: 260
-              maxWidth: 1600
+              maxWidth: 1800
               style: labelDescription
               text: Game description here
   - uuid: 26a873e6-7cb7-40ef-8c83-0a51bda64cca
