--- a/assets_src/ui/choose_system.yaml
+++ b/assets_src/ui/choose_system.yaml
@@ -37,6 +37,7 @@ children:
               id: system_image
               image: whitebox.png
               size: [0, 0]
+            fill: [centreHorizontal, centreVertical]
       - uuid: 773e8ffb-20c6-4b80-bd3c-244754abe268
         border: [50, 0, 0, 0]
         sizer:
