--- a/assets_src/ui/system_capsule.yaml
+++ b/assets_src/ui/system_capsule.yaml
@@ -44,6 +44,7 @@ children:
   - uuid: 373a303f-1e16-43e1-9ad2-456b55764948
     border: [0, 10, 0, 0]
     widget:
+      active: false
       class: label
       id: name
       marquee: 0
