--- a/assets_src/ui/choose_game.yaml
+++ b/assets_src/ui/choose_game.yaml
@@ -41,7 +41,8 @@ children:
             fill: [centreHorizontal, centreVertical]
         fill: [centreHorizontal, centreVertical]
       - uuid: 773e8ffb-20c6-4b80-bd3c-244754abe268
-        border: [120, 0, 0, 0]
+        proportion: 1
+        border: [120, 0, 60, 0]
         sizer:
           columnProportions: []
           gap: 15
@@ -138,6 +139,25 @@ children:
               maxWidth: 1800
               style: labelDescription
               text: Game description here
+      - uuid: 2e3601f6-8c09-40ba-88bc-8cf80cabf818
+        sizer:
+          columnProportions: []
+        widget:
+          class: widget
+          id: system_logo_holder
+        children:
+          - uuid: 8a946287-de26-403c-a347-53d024cfd614
+            border: [0, 0, 0, 0]
+            sizer:
+              columnProportions: []
+            widget:
+              class: image
+              colour: "#27272700"
+              id: system_logo
+              image: whitebox.png
+              size: [500, 300]
+            fill: [right, top]
+        fill: [right, top]
   - uuid: 26a873e6-7cb7-40ef-8c83-0a51bda64cca
     proportion: 1
     border: [80, 80, 80, 40]
