--- a/assets_src/ui/system_list.yaml
+++ b/assets_src/ui/system_list.yaml
@@ -34,5 +34,5 @@ children:
           class: list
           id: systemList
           options: []
-          style: gridList
+          style: systemList
           type: horizontal
