Savestates nearly complete

--- a/assets_src/ui/in_game_menu.yaml
+++ b/assets_src/ui/in_game_menu.yaml
@@ -110,7 +110,7 @@ children:
                       columnProportions: []
                     widget:
                       class: list
-                      id: savestates
+                      id: savestateList
                       options: []
                       style: savestateList
                       type: horizontal
